<resources>
    <string name="app_name">Preference Settings</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lockscreen_items_summary">hfyhgvjhvgctrfxjcthgkcvghjvhvhj hjvhftyghcgvhhkvyujchjvhg bbkhtjgfvhbj ghvgfvukyjghuyjgh</string>
    <string name="qs_settings">Status Bar and Quick Settings</string>
    <string name="qs_settings_summary">Costomize your statusbar and quick settings</string>

    <!-- The Team -->
    <string name="dialog_team_title">The team</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="designer_title">Designer</string>
    <string name="maintainer_name">joko</string>
    <string name="story">The Battle of Surabaya was fought between regular infantry and militia of the Indonesian nationalist movement and British and British Indian troops as a part of the Indonesian National Revolution against the re-imposition of Dutch colonial rule. The peak of the battle was in November 1945. The battle was the largest single battle of the revolution and became a national symbol of Indonesian resistance.[2] Considered a heroic effort by Indonesians, the battle helped galvanise Indonesian and international support for Indonesian independence. 10 November is celebrated annually as Heroes Day (Hari Pahlawan). </string>
</resources>